--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -1,15 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="{{ site:short_locale }}">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{{ title ?? site:name }}</title>
-        {{ vite src="resources/js/site.js|resources/css/site.css" }}
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        {{ alt_seo:meta }} {{ vite
+        src="resources/js/site.js|resources/css/site.css" }}
     </head>
     <body class="bg-gray-100 font-sans leading-normal text-gray-800">
-        <div class="mx-auto px-2 lg:min-h-screen flex flex-col items-center justify-center">
+        <header class="w-full">{{partial:main}}</header>
+        <div
+            class="mx-auto px-2 lg:min-h-screen flex flex-col items-center justify-center"
+        >
             {{ template_content }}
         </div>
+        {{partial:footer}}
     </body>
 </html>
